# lido-dao

./: .editorconfig  .env  .env.example  .eslintrc  .gitignore  .gitmodules  .mocharc.json  .prettierignore  .prettierrc  .solcover.js  .solhint.json  .solhintignore  .soliumignore  .soliumrc.json  .storage-layout  .yarnrc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_FORK.md  DEV_LOCAL.md  E2E.MD  GambitHashConsensus.conf  ProtocolLevers.md  README.md  SCRATCH_DEPLOY.md  SCRATH_DEPLOY.md  SECURITY.md  account-rewards.json  accounts.sample.json  arapp.json  artifacts.json  ava.config.cjs  babel.config.json  bugbounty.md  buidler.config.6.11.js  buidler.config.6.js  buidler.config.aragon-apps.js  buidler.config.js  config.json  dao-deploy.sh  (+67 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  assert-deployed-bytecode.js  assert-git-changes.py  deployed-bytecode-consts.js  prepare-accounts-json.py  verify-bytecode.js
.husky/: commit-msg  pre-commit
bytecode-verificator/: SHA256SUMS  bytecode_verificator.sh
certora/: Makefile  Makefile-StakingRouter  applyHarness.patch
cli/: Makefile  go.mod  go.sum  main.go
contracts/: COMPILERS.md  DePool.sol  README.md  StETH.sol
docs/: deployment.md  dev-fork.md  dev-local.md  howto-check-ipfs-hash.md  lido-aragon.md  lido-cli.md  multisig-deploy.md  multisig-upgrade.md  node-operator-manual.md  oracle-operator-manual.md  protocol-levers.md  scratch-deploy.md  upgrade-deploy.md
e2e/: .dockerignore  .env  README.MD  deposit.sh  dkg.sh  docker-compose.yml  full-run.sh  oracle.sh  oracle_build.sh  prysm_config.yml  startup.sh
(+1914 files in other folders)
